# The-AI-Engineer-Challenge-BM

./: .gitignore  .vercelignore  package.json  pyproject.toml  requirements.txt  vercel.json
api/: app.py  requirements.txt
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
