[project]
name = "beyond-chatgpt"
version = "0.1.0"
description = "gpt-like-a-dev"
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "openai==1.77.0",
    "pydantic==2.11.4",
    "python-multipart==0.0.18",
    "httpx==0.27.0",
    "httpcore==1.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
    "ruff",
    "ipython",
    "jupyter",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

# >>> Add this block to restrict package discovery to your backend
[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]
exclude = ["frontend*", "node_modules*", "dist*", "build*", ".venv*", "venv*"]